--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="services-container">
             <h4 class="services-subtitle">CATEGORY</h4>
             <h1 class="services-title">
-                We Offer <span>Top Services</span>
+                We Offer <span>Best Services</span>
             </h1>
             <div class="services-cards">
                 <!-- Card 1 -->
